Colaboratory를 통해 생성됨

--- a/3주차_과제의_사본.ipynb
+++ b/3주차_과제의_사본.ipynb
@@ -108,7 +108,7 @@
         "np.random.seed(123)\n",
         "X = np.random.random_sample([5,3])*10"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -129,7 +129,7 @@
         "df = pd.DataFrame(X,columns=variables,index=labels)\n",
         "df\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -225,7 +225,7 @@
         "Y = pdist(df) \n",
         "Y"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -265,7 +265,7 @@
       "source": [
         "from scipy.cluster.hierarchy import linkage"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -276,10 +276,33 @@
         "colab": {}
       },
       "source": [
-        "row_clusters = linkage(pdist(df,metric='euclidean'), method='complete' )"
+        "row_ clusters = linkage(df.values, metric='euclidean', method='complete' )"
+      ],
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RgJ2rATJ00MI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KEoIeHVZ1D_t",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
     },
     {
       "cell_type": "code",
@@ -288,26 +311,89 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 215
+          "height": 171
         },
-        "outputId": "b1f3ae76-0299-4f85-9e8d-0109b4589630"
+        "outputId": "f4d495ba-4366-40b8-d147-1d7504b99336"
       },
       "source": [
         "pd.DataFrame(row_clusters,\n",
         "             columns =['row label 1', 'row label 2','distance','no.of items in clust.'],index =['cluster %d' %(i+1) for i in range(row_clusters.shape[0])])"
       ],
-      "execution_count": 15,
+      "execution_count": 25,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-15-6101d5d18692>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m pd.DataFrame(row_clusters,\n\u001b[0m\u001b[1;32m      2\u001b[0m              columns =['row label 1', 'row label 2','distance','no.of items in clust.'],index =['cluster %d' %(i+1) for i in range(row_clusters.shape[0])])\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'row_clusters' is not defined"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>row label 1</th>\n",
+              "      <th>row label 2</th>\n",
+              "      <th>distance</th>\n",
+              "      <th>no.of items in clust.</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>cluster 1</th>\n",
+              "      <td>0.0</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>3.835396</td>\n",
+              "      <td>2.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>cluster 2</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>4.347073</td>\n",
+              "      <td>2.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>cluster 3</th>\n",
+              "      <td>3.0</td>\n",
+              "      <td>5.0</td>\n",
+              "      <td>5.899885</td>\n",
+              "      <td>3.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>cluster 4</th>\n",
+              "      <td>6.0</td>\n",
+              "      <td>7.0</td>\n",
+              "      <td>8.316594</td>\n",
+              "      <td>5.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "           row label 1  row label 2  distance  no.of items in clust.\n",
+              "cluster 1          0.0          4.0  3.835396                    2.0\n",
+              "cluster 2          1.0          2.0  4.347073                    2.0\n",
+              "cluster 3          3.0          5.0  5.899885                    3.0\n",
+              "cluster 4          6.0          7.0  8.316594                    5.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 25
         }
       ]
     },
